src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AT
    EXTERNAL
    FILE
    GOTO
    IMPLEMENTATION
    INTERFACE
    LABEL
    LBRACK2
    LCURLY
    NOT
    PACKED
    POINTER
    RBRACK2
    RCURLY
    UNIT
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> programHeading block DOT
Rule 2     programHeading -> PROGRAM identifier SEMI
Rule 3     identifier -> IDENT
Rule 4     block -> declarations compoundStatement
Rule 5     declarations -> declaration declarations
Rule 6     declarations -> empty
Rule 7     declaration -> constantDefinitionBlock
Rule 8     declaration -> typeDeclarationBlock
Rule 9     declaration -> variableDeclarationBlock
Rule 10    declaration -> procedureAndFunctionDeclarationBlock
Rule 11    constantDefinitionBlock -> CONST constantDefinitionList
Rule 12    constantDefinitionList -> constantDefinitionList constantDefinition SEMI
Rule 13    constantDefinitionList -> constantDefinition SEMI
Rule 14    constantDefinition -> identifier EQUAL constant
Rule 15    constant -> unsignedNumber
Rule 16    constant -> sign unsignedNumber
Rule 17    constant -> identifier
Rule 18    constant -> sign identifier
Rule 19    constant -> string
Rule 20    constant -> constantChr
Rule 21    unsignedNumber -> unsignedInteger
Rule 22    unsignedNumber -> unsignedReal
Rule 23    unsignedInteger -> NUM_INT
Rule 24    unsignedReal -> NUM_REAL
Rule 25    sign -> PLUS
Rule 26    sign -> MINUS
Rule 27    string -> STRING_LITERAL
Rule 28    constantChr -> CHR LPAREN unsignedInteger RPAREN
Rule 29    typeDeclarationBlock -> TYPE typeDefinitionList
Rule 30    typeDefinitionList -> typeDefinitionList typeDefinition SEMI
Rule 31    typeDefinitionList -> typeDefinition SEMI
Rule 32    typeDefinition -> identifier EQUAL type_
Rule 33    type_ -> scalarType
Rule 34    type_ -> subrangeType
Rule 35    type_ -> typeIdentifier
Rule 36    type_ -> stringType
Rule 37    type_ -> arrayType
Rule 38    scalarType -> LPAREN identifierList RPAREN
Rule 39    identifierList -> identifierList COMMA identifier
Rule 40    identifierList -> identifier
Rule 41    subrangeType -> unsignedInteger DOTDOT unsignedInteger
Rule 42    identifierType -> IDENT
Rule 43    stringType -> STRING LBRACK unsignedInteger RBRACK
Rule 44    structuredType -> arrayType
Rule 45    structuredType -> recordType
Rule 46    structuredType -> setType
Rule 47    arrayType -> ARRAY LBRACK subrangeType RBRACK OF typeIdentifier
Rule 48    typeList -> typeList COMMA indexType
Rule 49    typeList -> indexType
Rule 50    indexType -> simpleType
Rule 51    simpleType -> identifierType
Rule 52    recordType -> RECORD fieldList END
Rule 53    fieldList -> fixedPart
Rule 54    fieldList -> fixedPart SEMI variantPart
Rule 55    fieldList -> variantPart
Rule 56    fixedPart -> recordSectionList
Rule 57    recordSectionList -> recordSectionList SEMI recordSection
Rule 58    recordSectionList -> recordSection
Rule 59    recordSection -> identifierList COLON type_
Rule 60    variantPart -> CASE tag OF variantList
Rule 61    tag -> identifier COLON typeIdentifier
Rule 62    tag -> typeIdentifier
Rule 63    typeIdentifier -> identifier
Rule 64    typeIdentifier -> INTEGER
Rule 65    typeIdentifier -> REAL
Rule 66    typeIdentifier -> BOOLEAN
Rule 67    typeIdentifier -> CHAR
Rule 68    typeIdentifier -> STRING
Rule 69    variantList -> variantList SEMI variant
Rule 70    variantList -> variant
Rule 71    variant -> constList COLON LPAREN fieldList RPAREN
Rule 72    constList -> constList COMMA constant
Rule 73    constList -> constant
Rule 74    setType -> SET OF baseType
Rule 75    baseType -> simpleType
Rule 76    variableDeclarationBlock -> VAR variableDeclarationList SEMI
Rule 77    variableDeclarationList -> variableDeclarationList SEMI variableDeclaration
Rule 78    variableDeclarationList -> variableDeclaration
Rule 79    variableDeclaration -> identifierList COLON type_
Rule 80    procedureAndFunctionDeclarationBlock -> procedureDeclaration
Rule 81    procedureAndFunctionDeclarationBlock -> functionDeclaration
Rule 82    procedureDeclaration -> PROCEDURE identifier formalParameterList_opt SEMI block
Rule 83    formalParameterList_opt -> formalParameterList
Rule 84    formalParameterList_opt -> empty
Rule 85    formalParameterList -> LPAREN formalParameterSectionList RPAREN
Rule 86    formalParameterSectionList -> formalParameterSectionList SEMI formalParameterSection
Rule 87    formalParameterSectionList -> formalParameterSection
Rule 88    formalParameterSection -> parameterGroup
Rule 89    formalParameterSection -> VAR parameterGroup
Rule 90    formalParameterSection -> FUNCTION parameterGroup
Rule 91    formalParameterSection -> PROCEDURE parameterGroup
Rule 92    parameterGroup -> identifierList COLON typeIdentifier
Rule 93    functionDeclaration -> FUNCTION identifier formalParameterList_opt COLON resultType SEMI block
Rule 94    resultType -> typeIdentifier
Rule 95    compoundStatement -> BEGIN statements END
Rule 96    statements -> statements SEMI statement
Rule 97    statements -> statement
Rule 98    statement -> simpleStatement
Rule 99    statement -> structuredStatement
Rule 100   simpleStatement -> assignmentStatement
Rule 101   simpleStatement -> procedureStatement
Rule 102   simpleStatement -> emptyStatement_
Rule 103   assignmentStatement -> variable ASSIGN expression
Rule 104   variable -> identifier
Rule 105   variable -> indexedVariable
Rule 106   indexedVariable -> identifier LBRACK expression RBRACK
Rule 107   expression -> simpleExpression
Rule 108   expression -> simpleExpression relationalOperator simpleExpression
Rule 109   relationalOperator -> EQUAL
Rule 110   relationalOperator -> NOT_EQUAL
Rule 111   relationalOperator -> LT
Rule 112   relationalOperator -> LE
Rule 113   relationalOperator -> GT
Rule 114   relationalOperator -> GE
Rule 115   relationalOperator -> IN
Rule 116   simpleExpression -> term
Rule 117   simpleExpression -> sign term
Rule 118   simpleExpression -> simpleExpression additiveOperator term
Rule 119   additiveOperator -> PLUS
Rule 120   additiveOperator -> MINUS
Rule 121   additiveOperator -> OR
Rule 122   term -> factor
Rule 123   term -> term multiplicativeOperator factor
Rule 124   multiplicativeOperator -> STAR
Rule 125   multiplicativeOperator -> SLASH
Rule 126   multiplicativeOperator -> DIV
Rule 127   multiplicativeOperator -> MOD
Rule 128   multiplicativeOperator -> AND
Rule 129   factor -> variable
Rule 130   factor -> unsignedConstant
Rule 131   factor -> LPAREN expression RPAREN
Rule 132   unsignedConstant -> unsignedNumber
Rule 133   unsignedConstant -> string
Rule 134   unsignedConstant -> NIL
Rule 135   unsignedConstant -> TRUE
Rule 136   unsignedConstant -> FALSE
Rule 137   procedureStatement -> identifier
Rule 138   procedureStatement -> identifier LPAREN expressionList RPAREN
Rule 139   expressionList -> expressionList COMMA expression
Rule 140   expressionList -> expressionList COMMA formattedExpression
Rule 141   expressionList -> expression
Rule 142   expressionList -> formattedExpression
Rule 143   formattedExpression -> variable COLON expression COLON expression
Rule 144   formattedExpression -> variable COLON expression
Rule 145   emptyStatement_ -> <empty>
Rule 146   structuredStatement -> compoundStatement
Rule 147   structuredStatement -> conditionalStatement
Rule 148   structuredStatement -> loopStatement
Rule 149   loopStatement -> forStatement
Rule 150   loopStatement -> whileStatement
Rule 151   loopStatement -> repeatStatement
Rule 152   forStatement -> FOR identifier ASSIGN expression TO expression DO statement
Rule 153   forStatement -> FOR identifier ASSIGN expression DOWNTO expression DO statement
Rule 154   whileStatement -> WHILE expression DO statement
Rule 155   repeatStatement -> REPEAT statements UNTIL expression
Rule 156   conditionalStatement -> ifStatement
Rule 157   ifStatement -> IF expression THEN statement
Rule 158   ifStatement -> IF expression THEN statement ELSE statement
Rule 159   empty -> <empty>

Terminals, with rules where they appear

AND                  : 128
ARRAY                : 47
ASSIGN               : 103 152 153
AT                   : 
BEGIN                : 95
BOOLEAN              : 66
CASE                 : 60
CHAR                 : 67
CHR                  : 28
COLON                : 59 61 71 79 92 93 143 143 144
COMMA                : 39 48 72 139 140
CONST                : 11
DIV                  : 126
DO                   : 152 153 154
DOT                  : 1
DOTDOT               : 41
DOWNTO               : 153
ELSE                 : 158
END                  : 52 95
EQUAL                : 14 32 109
EXTERNAL             : 
FALSE                : 136
FILE                 : 
FOR                  : 152 153
FUNCTION             : 90 93
GE                   : 114
GOTO                 : 
GT                   : 113
IDENT                : 3 42
IF                   : 157 158
IMPLEMENTATION       : 
IN                   : 115
INTEGER              : 64
INTERFACE            : 
LABEL                : 
LBRACK               : 43 47 106
LBRACK2              : 
LCURLY               : 
LE                   : 112
LPAREN               : 28 38 71 85 131 138
LT                   : 111
MINUS                : 26 120
MOD                  : 127
NIL                  : 134
NOT                  : 
NOT_EQUAL            : 110
NUM_INT              : 23
NUM_REAL             : 24
OF                   : 47 60 74
OR                   : 121
PACKED               : 
PLUS                 : 25 119
POINTER              : 
PROCEDURE            : 82 91
PROGRAM              : 2
RBRACK               : 43 47 106
RBRACK2              : 
RCURLY               : 
REAL                 : 65
RECORD               : 52
REPEAT               : 155
RPAREN               : 28 38 71 85 131 138
SEMI                 : 2 12 13 30 31 54 57 69 76 77 82 86 93 96
SET                  : 74
SLASH                : 125
STAR                 : 124
STRING               : 43 68
STRING_LITERAL       : 27
THEN                 : 157 158
TO                   : 152
TRUE                 : 135
TYPE                 : 29
UNIT                 : 
UNTIL                : 155
VAR                  : 76 89
WHILE                : 154
WITH                 : 
error                : 

Nonterminals, with rules where they appear

additiveOperator     : 118
arrayType            : 37 44
assignmentStatement  : 100
baseType             : 74
block                : 1 82 93
compoundStatement    : 4 146
conditionalStatement : 147
constList            : 71 72
constant             : 14 72 73
constantChr          : 20
constantDefinition   : 12 13
constantDefinitionBlock : 7
constantDefinitionList : 11 12
declaration          : 5
declarations         : 4 5
empty                : 6 84
emptyStatement_      : 102
expression           : 103 106 131 139 141 143 143 144 152 152 153 153 154 155 157 158
expressionList       : 138 139 140
factor               : 122 123
fieldList            : 52 71
fixedPart            : 53 54
forStatement         : 149
formalParameterList  : 83
formalParameterList_opt : 82 93
formalParameterSection : 86 87
formalParameterSectionList : 85 86
formattedExpression  : 140 142
functionDeclaration  : 81
identifier           : 2 14 17 18 32 39 40 61 63 82 93 104 106 137 138 152 153
identifierList       : 38 39 59 79 92
identifierType       : 51
ifStatement          : 156
indexType            : 48 49
indexedVariable      : 105
loopStatement        : 148
multiplicativeOperator : 123
parameterGroup       : 88 89 90 91
procedureAndFunctionDeclarationBlock : 10
procedureDeclaration : 80
procedureStatement   : 101
program              : 0
programHeading       : 1
recordSection        : 57 58
recordSectionList    : 56 57
recordType           : 45
relationalOperator   : 108
repeatStatement      : 151
resultType           : 93
scalarType           : 33
setType              : 46
sign                 : 16 18 117
simpleExpression     : 107 108 108 118
simpleStatement      : 98
simpleType           : 50 75
statement            : 96 97 152 153 154 157 158 158
statements           : 95 96 155
string               : 19 133
stringType           : 36
structuredStatement  : 99
structuredType       : 
subrangeType         : 34 47
tag                  : 60
term                 : 116 117 118 123
typeDeclarationBlock : 8
typeDefinition       : 30 31
typeDefinitionList   : 29 30
typeIdentifier       : 35 47 61 62 92 94
typeList             : 48
type_                : 32 59 79
unsignedConstant     : 130
unsignedInteger      : 21 28 41 41 43
unsignedNumber       : 15 16 132
unsignedReal         : 22
variable             : 103 129 143 144
variableDeclaration  : 77 78
variableDeclarationBlock : 9
variableDeclarationList : 76 77
variant              : 69 70
variantList          : 60 69
variantPart          : 54 55
whileStatement       : 150

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . programHeading block DOT
    (2) programHeading -> . PROGRAM identifier SEMI

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    programHeading                 shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> programHeading . block DOT
    (4) block -> . declarations compoundStatement
    (5) declarations -> . declaration declarations
    (6) declarations -> . empty
    (7) declaration -> . constantDefinitionBlock
    (8) declaration -> . typeDeclarationBlock
    (9) declaration -> . variableDeclarationBlock
    (10) declaration -> . procedureAndFunctionDeclarationBlock
    (159) empty -> .
    (11) constantDefinitionBlock -> . CONST constantDefinitionList
    (29) typeDeclarationBlock -> . TYPE typeDefinitionList
    (76) variableDeclarationBlock -> . VAR variableDeclarationList SEMI
    (80) procedureAndFunctionDeclarationBlock -> . procedureDeclaration
    (81) procedureAndFunctionDeclarationBlock -> . functionDeclaration
    (82) procedureDeclaration -> . PROCEDURE identifier formalParameterList_opt SEMI block
    (93) functionDeclaration -> . FUNCTION identifier formalParameterList_opt COLON resultType SEMI block

    BEGIN           reduce using rule 159 (empty -> .)
    CONST           shift and go to state 12
    TYPE            shift and go to state 13
    VAR             shift and go to state 14
    PROCEDURE       shift and go to state 17
    FUNCTION        shift and go to state 18

    block                          shift and go to state 4
    declarations                   shift and go to state 5
    declaration                    shift and go to state 6
    empty                          shift and go to state 7
    constantDefinitionBlock        shift and go to state 8
    typeDeclarationBlock           shift and go to state 9
    variableDeclarationBlock       shift and go to state 10
    procedureAndFunctionDeclarationBlock shift and go to state 11
    procedureDeclaration           shift and go to state 15
    functionDeclaration            shift and go to state 16

state 3

    (2) programHeading -> PROGRAM . identifier SEMI
    (3) identifier -> . IDENT

    IDENT           shift and go to state 20

    identifier                     shift and go to state 19

state 4

    (1) program -> programHeading block . DOT

    DOT             shift and go to state 21


state 5

    (4) block -> declarations . compoundStatement
    (95) compoundStatement -> . BEGIN statements END

    BEGIN           shift and go to state 23

    compoundStatement              shift and go to state 22

state 6

    (5) declarations -> declaration . declarations
    (5) declarations -> . declaration declarations
    (6) declarations -> . empty
    (7) declaration -> . constantDefinitionBlock
    (8) declaration -> . typeDeclarationBlock
    (9) declaration -> . variableDeclarationBlock
    (10) declaration -> . procedureAndFunctionDeclarationBlock
    (159) empty -> .
    (11) constantDefinitionBlock -> . CONST constantDefinitionList
    (29) typeDeclarationBlock -> . TYPE typeDefinitionList
    (76) variableDeclarationBlock -> . VAR variableDeclarationList SEMI
    (80) procedureAndFunctionDeclarationBlock -> . procedureDeclaration
    (81) procedureAndFunctionDeclarationBlock -> . functionDeclaration
    (82) procedureDeclaration -> . PROCEDURE identifier formalParameterList_opt SEMI block
    (93) functionDeclaration -> . FUNCTION identifier formalParameterList_opt COLON resultType SEMI block

    BEGIN           reduce using rule 159 (empty -> .)
    CONST           shift and go to state 12
    TYPE            shift and go to state 13
    VAR             shift and go to state 14
    PROCEDURE       shift and go to state 17
    FUNCTION        shift and go to state 18

    declaration                    shift and go to state 6
    declarations                   shift and go to state 24
    empty                          shift and go to state 7
    constantDefinitionBlock        shift and go to state 8
    typeDeclarationBlock           shift and go to state 9
    variableDeclarationBlock       shift and go to state 10
    procedureAndFunctionDeclarationBlock shift and go to state 11
    procedureDeclaration           shift and go to state 15
    functionDeclaration            shift and go to state 16

state 7

    (6) declarations -> empty .

    BEGIN           reduce using rule 6 (declarations -> empty .)


state 8

    (7) declaration -> constantDefinitionBlock .

    CONST           reduce using rule 7 (declaration -> constantDefinitionBlock .)
    TYPE            reduce using rule 7 (declaration -> constantDefinitionBlock .)
    VAR             reduce using rule 7 (declaration -> constantDefinitionBlock .)
    PROCEDURE       reduce using rule 7 (declaration -> constantDefinitionBlock .)
    FUNCTION        reduce using rule 7 (declaration -> constantDefinitionBlock .)
    BEGIN           reduce using rule 7 (declaration -> constantDefinitionBlock .)


state 9

    (8) declaration -> typeDeclarationBlock .

    CONST           reduce using rule 8 (declaration -> typeDeclarationBlock .)
    TYPE            reduce using rule 8 (declaration -> typeDeclarationBlock .)
    VAR             reduce using rule 8 (declaration -> typeDeclarationBlock .)
    PROCEDURE       reduce using rule 8 (declaration -> typeDeclarationBlock .)
    FUNCTION        reduce using rule 8 (declaration -> typeDeclarationBlock .)
    BEGIN           reduce using rule 8 (declaration -> typeDeclarationBlock .)


state 10

    (9) declaration -> variableDeclarationBlock .
